k8s/cluster2/base/minio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "minio"
---
apiVersion: v1
kind: Namespace
metadata:
  name: "minio-tenant-1"
